--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,9 @@ trunk/core/sim/*
 trunk/web/discuss3/*
 .DS_Store
 .venv
+*.o
+trunk/core/judge_client/judge_client
+trunk/core/judge_client/judge_client.http
+trunk/core/judged/judged
+trunk/core/judged/judged.http
+trunk/core/judged/judgehub
